[package]
name = "luckee_nft"
version = "0.1.0"
edition = "2021"
authors = ["Luckee Team"]
description = "A no_std compatible NFT contract with synthesis capabilities"
license = "MIT"
keywords = ["nft", "cosmwasm", "no-std", "synthesis"]
categories = ["blockchain", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
std = ["dep:serde", "dep:serde_json", "dep:cosmwasm-schema", "dep:schemars", "dep:thiserror"]
cosmwasm = ["cosmwasm-std", "cw-storage-plus", "cw721", "cw721-base", "cw-utils", "cw2"]

[dependencies]
# Core no_std dependencies
cosmwasm-std = { version = "2.2.2", features = ["iterator"], default-features = false, optional = true }
cw-storage-plus = { version = "2.2.2", default-features = false, optional = true }
cw721-base = { version = "0.18", default-features = false, optional = true }
cw721 = { version = "0.18", default-features = false, optional = true }
cw-utils = { version = "3.2.0", default-features = false, optional = true }
cw2 = { version = "2.0", default-features = false, optional = true }

# Optional std dependencies
cosmwasm-schema = { version = "2.2.2", optional = true }
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
cw-multi-test = "0.18"
